--- a/practice.html
+++ b/practice.html
@@ -3,26 +3,20 @@
 <head>
     <title>WEB1 -html</title>
     <meta charset="utf-8"> <!-- utf-8로 읽으라-->
+    <link rel= "stylesheet" href="style.css">
 </head>
 
 <body>
 
 <h1>WEB</h1>
+<div ID="grid">
 <ol> <!-- ordered list--> 
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
+    <li><a href="1.html" >HTML</a></li>
+    <li><a href="2.html" >CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
 </ol>
-
+<div ID="arcticle">
 <h2>HTML이란 무엇인가?</h2>
-
-
-
-<ul><!-- unordered list-->
-    <li>egoing</li>
-    <li>k8805</li>
-    <li>youbin</li>
-</ul>
 
 <!--링크걸기-->
 <a href="https://www.w3.org/TR/2021/SPSD-html52-20210128/">what</a>
@@ -35,14 +29,12 @@
 <!--툴팁-->
 <a href="https://www.w3.org/TR/2021/SPSD-html52-20210128/" target='_blank' title="html5">what</a> 
 
-
-<h2>HTML</h2>
 <p style="margin-top:40px"><strong>hypertext <br><u>markup</u> languge (HTML)</strong> is the standard markup language for creating web pages and web applications.
 </p>programmer is<a href="https://www.w3.org/TR/2021/SPSD-html52-20210128/" target='_blank'>what</a> I want to be.  if there is no tag for new line, 
 <p>america</p>
 america
-
-
+</div>
+</div>
 
 
 
