--- a/practice.html
+++ b/practice.html
@@ -9,6 +9,17 @@
 <body>
 
 <h1>WEB</h1>
+<input type='button' value='night' onclick="
+document.querySelector('body').style.backgroundColor = 'black';
+document.querySelector('body').style.color = 'white';
+document.querySelector('li').style.color = 'white';
+">
+<input type='button' value='day' onclick="
+document.querySelector('body').style.backgroundColor = 'white';
+document.querySelector('body').style.color = 'black';
+document.querySelector('li').style.color = 'black';
+">
+
 <div ID="grid">
 <ol> <!-- ordered list--> 
     <li><a href="1.html" >HTML</a></li>
