--- a/practice.html
+++ b/practice.html
@@ -20,6 +20,48 @@ document.querySelector('body').style.color = 'black';
 document.querySelector('li').style.color = 'black';
 ">
 
+<input id="night_day" type="button" value="night" onclick="
+    if(document.querySelector('#night_day').value ==='night'){
+    document.querySelector('body').style.backgroundColor = 'black';
+    document.querySelector('body').style.color = 'white';
+    document.querySelector('#night_day').value ='day';
+
+    }else{
+    document.querySelector('body').style.backgroundColor = 'white';
+    document.querySelector('body').style.color = 'black';
+    document.querySelector('#night_day').value ='night';
+    }
+">
+
+<input type="button" value="night" onclick="
+var target= document.querySelector('body') 
+    if(this.value ==='night'){
+    target.style.backgroundColor = 'black';
+    target.style.color = 'white';
+    this.value ='day';
+   
+    var alist = document.querySelectorAll('a');
+    var i = 0
+    while(i<alist.length){
+    alist[i].style.color = 'powderblue';
+    i=i+1;
+    }
+
+    }else{
+    target.style.backgroundColor = 'white';
+    target.style.color = 'black';
+    this.value ='night';
+    var alist = document.querySelectorAll('a');
+    var i = 0
+    while(i<alist.length){
+    alist[i].style.color = 'blue';
+    i=i+1;
+}
+    }
+">
+
+<!--중복하는 건 전부 쫒아가서 변수처리해서 간결하게 하라-->
+
 <div ID="grid">
 <ol> <!-- ordered list--> 
     <li><a href="1.html" >HTML</a></li>
